<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="@drawable/vertical_divider_1"
    android:dividerPadding="12dip"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:showDividers="middle"
    android:weightSum="1"
    tools:context="com.example.stratos.posterfun.fragments.FilterOtherFragment">

    <CheckBox
        android:id="@+id/fother_freeonly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:button="@null"
        android:checked="false"
        android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
        android:text="@string/btnFreeOnly" />

    <CheckBox
        android:id="@+id/fother_cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:button="@null"
        android:checked="false"
        android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
        android:text="@string/btnCostsize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lessSize" />

        <EditText
            android:id="@+id/fother_costval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:ems="10"
            android:inputType="number" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary900" />

    <CheckBox
        android:id="@+id/fother_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:button="@null"
        android:checked="false"
        android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
        android:text="@string/limitDist" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inRadius" />

        <EditText
            android:id="@+id/fother_distval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:ems="10"
            android:inputType="number" />

    </LinearLayout>


    <Button
        android:id="@+id/fother_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnDone"
        android:textColor="@color/white"
        android:enabled="false"
        android:theme="@style/MyDefButton" />
</LinearLayout>
