<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.stratos.posterfun.fragments.FilterDateFragment">


    <Button
        android:id="@+id/fdate_btnAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/MyDefButton"
        android:textColor="@color/white"
        android:text="@string/btnForAllDates"/>

    <DatePicker
        android:id="@+id/fdate_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:calendarViewShown="false"
        android:startYear="2010" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/fdate_btnCansel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@color/colorPrimary"
            android:text="@string/close"
            android:layout_weight="1" />

        <Button
            android:id="@+id/fdate_btnDone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@color/colorPrimary"
            android:text="@string/btnDone"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>
