<?xml version="1.0" encoding="utf-8"?><!--<TextView xmlns:android="http://schemas.android.com/apk/res/android"--><!--xmlns:tools="http://schemas.android.com/tools"--><!--android:id="@+id/item_detail"--><!--style="?android:attr/textAppearanceLarge"--><!--android:layout_width="match_parent"--><!--android:layout_height="match_parent"--><!--android:padding="16dp"--><!--android:textIsSelectable="true"--><!--tools:context="com.example.stratos.posterfun.fragments.ItemDetailFragment" />-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/detail_scroll"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/detail_tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:padding="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/detail_tvDateTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:ellipsize="end"
                android:text="DataTime"
                android:textColor="@color/textSecond"
                android:textSize="15sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/detail_tvLike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="right"
                android:text="liks"
                android:textColor="@color/textSecond"
                android:textSize="15sp"
                android:textStyle="italic" />

        </LinearLayout>


        <TextView
            android:id="@+id/detail_tvStartView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:padding="5dp"
            android:text="StartView"
            android:textColor="@color/textPrimary"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/detail_PriceName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/priceValue"
                    android:textColor="@color/textSecond"
                    android:textSize="15sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/detail_tvPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/priceValue"
                    android:textColor="@color/textPrimary"
                    android:textSize="15sp" />
            </LinearLayout>

            <Button
                android:id="@+id/detail_PriceButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ticket"
                android:textColor="@color/colorPrimary"
                android:visibility="gone" />
        </LinearLayout>

        <fragment
            android:id="@+id/detail_map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="200dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/backgroundSecond"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                app:cardElevation="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/detail_tvTerrain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="Terrain"
                        android:textColor="@color/textPrimary"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/detail_tvAddres"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="Addres"
                        android:textColor="@color/textPrimary"
                        android:textSize="15sp" />

                </LinearLayout>

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginTop="3dp"
                app:cardElevation="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:padding="5dp"
                    android:text="@string/Description"
                    android:textColor="@color/textPrimary"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/detail_tvDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:ellipsize="end"
                    android:lineSpacingExtra="4dp"
                    android:padding="5dp"
                    android:text="@string/Description"
                    android:textColor="@color/textPrimary"
                    android:textSize="15sp" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginTop="3dp"
                app:cardElevation="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:text="@string/Comments"
                        android:textColor="@color/textPrimary"
                        android:textSize="15sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/backgroundSecond"
                        android:textColor="@color/textPrimary"
                        android:lines="2"
                        android:hint="@string/comment_hint"/>

                    <Button
                        android:id="@+id/detail_commentadd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="@string/send"
                        android:textColor="@color/white"
                        android:theme="@style/MyDefButton"/>

                </LinearLayout>


            </android.support.v7.widget.CardView>
        </LinearLayout>


    </LinearLayout>
</ScrollView>
